sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: '(' expected but identifier found.
    if plusPetit(i,i+1)  {
       ^AlgSelectionSort:14: error: illegal start of simple expression
  }
  ^